--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   app:
     build: .
     ports:
-      - "5000:5000"
+      - "80:5000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/
+      - MONGO_URI=mongodb://mongo:27017/users
     depends_on:
       - mongo
 
@@ -15,7 +15,7 @@ services:
       - mongo_data:/data/db
     ports:
       - "27017:27017"
-      
+
 volumes:
   mongo_data:
   grafana_data:
